# RemoveSubTitle

./: .gitignore  CMakeLists.txt  README.md
include/remove_subtitle/: flow_aligner.hpp  geometry.hpp  options.hpp  processor.hpp  region_restorer.hpp  subtitle_detector.hpp
src/: flow_aligner.cpp  geometry.cpp  main.cpp  options.cpp  processor.cpp  region_restorer.cpp  subtitle_detector.cpp
tests/e2e/: test_cli.cpp
tests/unit/: test_detector.cpp  test_flow.cpp  test_geometry.cpp  test_restorer.cpp
